--- a/paper/main.tex
+++ b/paper/main.tex
@@ -27,6 +27,9 @@
 % --------------------------
 
 \input{content/chapter-introduction}
+\input{content/chapter-spectral-graph-theory}
+\input{content/chapter-coarsening}
+\input{content/chapter-spectral-similarity}
 \input{content/chapter-conclusion}
 
 % --------------------------
