--- a/paper/config.tex
+++ b/paper/config.tex
@@ -7,6 +7,7 @@
 \PassOptionsToPackage{utf8}{inputenc}
 \usepackage{inputenc}
 \usepackage[ngerman,english]{babel}
+\usepackage{csquotes}
 
 % **************************************************
 % Information and Commands for Reuse
@@ -63,6 +64,7 @@
 \usepackage{bm}
 \usepackage{bbm}
 \usepackage{units}
+\usepackage{upgreek}
 \newcommand\numberthis{\addtocounter{equation}{1}\tag{\theequation}}
 
 \usepackage{algpseudocode}
