--- a/paper/content/chapter-spectral-graph-theory.tex
+++ b/paper/content/chapter-spectral-graph-theory.tex
@@ -31,7 +31,7 @@ Intuitively graph signals can thus be understood as a discretized generalization
 	\includegraphics[width=0.9\linewidth]{gfx/sgt/real-graph.pdf}
 	\caption{
 		Illustration of how the discretized real number line can be interpreted as an infinite linear graph, compared to some arbitrary finite non-linear graph.
-		The blue bars show the signal strength at each vertex.
+		The bars show the signal strengths $f(i)$/$x_i$ at the vertices $b_i$.
 	}\label{fig:sgt:real-graph}
 \end{figure}
 Figure~\ref{fig:sgt:real-graph} shows that all real functions $f$ can be seen as signals $x$ of the graph described by the real number line\footnote{
@@ -42,18 +42,36 @@ Both, real functions and graph signals, can be described as vectors in their tim
 \begin{equation}
 	\begin{split}
 		f = \int_{\mathbb{R}} f(t) b_t dt
-		\Rightarrow \langle f, b_t \rangle = f(t)
+		\Rightarrow \langle b_t, f \rangle = f(t)
 	\end{split}
 	\quad\text{and}\quad
 	\begin{split}
 		x = \sum_{i = 1}^{N} x_i b_i
-		\Rightarrow \langle x, b_i \rangle = x_i
+		\Rightarrow \langle b_i, x \rangle = x_i
 	\end{split}
 \end{equation}
-Here ${\{ b_i \}}_{v_i \in \mathcal{V}}$ denotes the standard basis of the adjacency matrix $W$.
+In this equation ${\{ b_i \}}_{v_i \in \mathcal{V}}$ denotes the standard basis of the adjacency matrix $W$.
 Similarly ${\{ b_t \}}_{t \in \mathbb{R}}$ denotes the infinite dimensional standard basis of the space of real functions, where $\langle \cdot, b_t \rangle := \delta_t(\cdot)$, with $\delta$ denoting the Dirac delta function.
 
 \subsection{Extending the Fourier Transform to Graphs}%
 \label{sec:sgt:fourier}
 
 As mentioned at the beginning of this section, the core idea of spectral graph theory is to express graph signal vectors $x$ in the spectral basis ${\{ u_i \}}_{i = 1}^{N}$ instead of the standard vertex basis ${\{ b_i \}}_{v_i \in \mathcal{V}}$.
+This idea is analogous to the classical Fourier transform on real-valued functions.
+The Fourier basis ${\{ u_\xi \}}_{\xi \in \mathbb{R}}$ describes a function $f$ not in terms of the values $f(t) = \langle b_t, f \rangle$ it takes at times $t$ but instead in terms of the amplitudes $\hat{f}(\xi) = \langle u_\xi, f \rangle$ of the complex exponentials $u_\xi(t) = e^{2\pi i \xi t}$.
+Using this perspective, the Fourier transform can be viewed as a change of basis operator from the orthonormal standard basis ${\{ b_t \}}_{t \in \mathbb{R}}$ to the also orthonormal Fourier basis ${\{ u_\xi \}}_{\xi \in \mathbb{R}}$:
+\begin{align}
+	f = \int_{\mathbb{R}} \underbrace{\langle b_t, f \rangle}_{f(t)} b_t dt = \int_{\mathbb{R}} \underbrace{\langle u_\xi, f \rangle}_{\hat{f}(\xi)} u_\xi d\xi
+\end{align}
+This property of the Fourier transform alone is not special; in fact there are infinitely many orthonormal bases on the space of real-valued functions.
+The distinguishing property of ${\{ u_\xi \}}_{\xi \in \mathbb{R}}$ that makes it useful in many domains is that it is an eigenbasis of the Laplacian operator $\ma\Updelta$, i.~e.\@ $\Updelta u_\xi = \lambda_\xi u_\xi$ for $\lambda_\xi \in \mathbb{R}$.
+The Laplacian is a multi\-dimensional generalization of the second derivative;
+for real-valued functions this boils down to $\Updelta u_\xi = \frac{\partial^2}{\partial t^2} u_\xi = -{(2 \pi \xi)}^2 e^{2 \pi i \xi t}$.
+
+\begin{figure}
+	\centering
+	\makebox[\textwidth][c]{\includegraphics[width=\linewidth]{gfx/sgt/graph-fourier.pdf}}
+	\caption{
+		x
+	}\label{fig:sgt:graph-fourier}
+\end{figure}
