completed the spectral graph theory chapter

--- a/paper/content/chapter-introduction.tex
+++ b/paper/content/chapter-introduction.tex
@@ -20,7 +20,7 @@ Figure~\ref{fig:intro:overview} illustrates this approach.
 	\centering
 	\includegraphics[width=0.8\linewidth]{gfx/intro/overview.pdf}
 	\caption{
-		Using graph coarsening to speed up graph algorithms, e.~g.\@ Min-Cut.
+		Using graph coarsening to speed up graph algorithms, e.g.\@ Min-Cut.
 	}\label{fig:intro:overview}
 \end{figure}
 
@@ -30,9 +30,9 @@ This introduction consists of three sections, each of which aims to answer one m
 	\item \textit{How can the structural properties of a graph be formally described?}
 		To describe graph coarsening and its effects, the similarity between a graph $G$ and its coarsened version $G_c$ has to be quantified.
 		We begin with an introduction to spectral graph theory.
-		It allows us to describe the structure of graphs and provides the notion of \textit{spectral similarity}, a measure to compare the structure of graphs.
+		It allows us to describe the structure of graphs and provides the notion of the \textit{graph spectrum}, a way to describe the overall structure of graphs.
 	\item \textit{How does graph coarsening work?}
-		Using the notion of spectral similarity, we will look at a randomized coarsening algorithm and analyze its effects on the structure of the coarsened graph.
+		Based on the notion of the graph spectrum, we will look at a randomized coarsening algorithm and analyze its effects on the structure of the coarsened graph.
 	\item \textit{How does coarsening affect the result of graph algorithms?}
 		Finally we will put bounds on how much the described coarsening algorithm is expected to increase the error of spectral clustering.
 \end{enumerate}
