--- a/paper/content/chapter-spectral-graph-theory.tex
+++ b/paper/content/chapter-spectral-graph-theory.tex
@@ -5,11 +5,11 @@
 \label{sec:sgt}
 
 We start with an introduction to spectral graph theory, which will allow us to characterize and compare the structure of graphs.
-Graphs are most commonly described in their vertex base, i.~e.\@ the strength $w_{i j}$ with which pairs $(v_i, v_j)$ of vertices are connected.
+Graphs are most commonly described in their vertex base, i.e.\@ the strength $w_{i j}$ with which pairs $(v_i, v_j)$ of vertices are connected.
 \begin{align*}
 	G :=&\, (\mathcal{V}, \mathcal{E}, W) \text{ with } W \in \mathbb{R}^{N \times N}, N := |\mathcal{V}|
 \end{align*}
-In this paper we will only consider undirected graphs with non-negative real weights; thus the adjacency matrix $W$ is positive semi-definite.
+In this paper we will only consider undirected graphs with non-negative real weights.
 
 The core idea of spectral graph theory is to perform a change of basis of $W$ and describe graphs in terms of their so called \textit{spectral base} instead of their \textit{vertex base}.
 To see what this means, we interpret the adjacency matrix $W$ as a linear operator that operates on so called signals $x \in \mathbb{R}^N$.
@@ -17,13 +17,13 @@ A signal $x$ can be interpreted as a function $x: \mathcal{V} \to \mathbb{R}$ th
 By applying $Wx$ the given signal strengths $x_i$ are shifted according to the connection strenghts $w_{i j}$ to neighboring vertices $v_j$.
 This interpretation of graphs is very similar to that of Markov chains where signals represent probability distributions.
 
-\subsection{Relating Graph Signals to Real Functions}%
+\subsection{Relating Graph Signals to Real-valued Functions}%
 \label{sec:sgt:real}
 
-Let us now compare discrete graph signals $x: \mathcal{V} \to \mathbb{R}$ to continuous real functions $f: \mathbb{R} \to \mathbb{R}$.
+Let us now compare discrete graph signals $x: \mathcal{V} \to \mathbb{R}$ to continuous real-valued functions $f: \mathbb{R} \to \mathbb{R}$.
 Both only differ in their domain.
 The domain $\mathbb{R}$ of $f$ has an inherent structure, the real number line, which provides a strict ordering of its elements and a notion of distance between them.
-The domain $\mathcal{V}$ of $x$ however has no such inherent structure, i.~e.\@ $v_1 < v_2$ for two vertices $v_1, v_2$ does not have a clear meaning.
+The domain $\mathcal{V}$ of $x$ however has no such inherent structure, i.e.\@ $v_1 < v_2$ for two vertices $v_1, v_2$ does not have a clear meaning.
 The structure of $\mathcal{V}$ fully depends on the graph $G$ that is acting on it.
 Intuitively graph signals can thus be understood as a discretized generalization of real functions, where the underlying structure of the input domain is not fixed but can be freely chosen.
 \begin{figure}
@@ -67,26 +67,80 @@ Using this perspective, the Fourier transform can be viewed as a change of basis
 	f = \int_{\mathbb{R}} \underbrace{\langle b_t, f \rangle}_{f(t)} b_t dt = \int_{\mathbb{R}} \underbrace{\langle u_\xi, f \rangle}_{\hat{f}(\xi)} u_\xi d\xi
 \end{align}
 This property of the Fourier transform by itself is not special; in fact there are infinitely many orthonormal bases on the space of real-valued functions.
-The distinguishing property of ${\{ u_\xi \}}_{\xi \in \mathbb{R}}$, making it useful in many domains, is that it is an \textit{eigenbasis} of the \textit{Laplacian} $\ma\Updelta$, i.~e.\@ $\Updelta u_\xi = \lambda_\xi u_\xi$ for $\lambda_\xi \in \mathbb{R}$.
+The distinguishing property of ${\{ u_\xi \}}_{\xi \in \mathbb{R}}$, making it useful in many domains, is that it is an \textit{eigenbasis} of the \textit{Laplacian} $\Updelta$, i.e.\@ $\Updelta u_\xi = \lambda_\xi u_\xi$ for the eigenvalue $\lambda_\xi \in \mathbb{R}$.
 The Laplacian is a multi\-dimensional generalization of the second derivative.
-For real-valued functions this boils down to $\Updelta u_\xi = \frac{\partial^2}{\partial t^2} u_\xi = -{(2 \pi \xi)}^2 e^{2 \pi i \xi t}$.
+For real-valued functions this boils down to $\Updelta u_\xi = \frac{\partial^2}{\partial t^2} u_\xi = -{(2 \pi \xi)}^2 e^{2 \pi i \xi t}$ with the eigenvalues $\lambda_\xi = {-(2\pi\xi)}^2$ depending solely on the frequency $\xi$.
 The original motivation to express functions in terms of the Laplacian's eigenbasis was to solve the physical heat equation\footnote{
-	More generally the Fourier basis turns out to be meaningful for all \textit{linear time-invariant} (LTI) systems, of which the heat equation is only one instance.
+	More generally the Fourier basis turns out to be meaningful for all \textit{linear time-invariant} (LTI) systems, of which heat equations are only one instance.
 }.
 For this reason it is a useful intuition to think about signals as temperature distributions that will converge to an equilibrium state over time.
 This intuition also works in the graph setting where heat only flows between neighboring vertices in proportion to their connection strengths.
 
-Now, that we have looked at the Fourier transform of real-valued functions, we will extend this notion to graphs.
-Just like the classical Fourier transform, the graph Fourier transform performs a change of basis of a signal $x$ from the vertex basis ${\{ b_i \}}_{v_i \in \mathcal{V}}$ to the Fourier basis ${\{ u_k \}}_{1 \leq k \leq |\mathcal{V}|}$.
+Now that we have looked at the Fourier transform of real-valued functions, we will extend this notion to graphs.
+Just like the classical Fourier transform, the graph Fourier transform performs a change of basis of a signal $x$ from the vertex basis ${\{ b_i \}}_{v_i \in \mathcal{V}}$ to the Fourier basis ${\{ u_k \}}_{1 \leq k \leq N}$.
 This Fourier basis again is characterized by it being an eigenbasis of the Laplacian, more specifically the so called \textit{combinatorial graph Laplacian} $L$ in this case.
 \begin{align}
-	L := D - W \text{ with } D :=
+	L := D - W \text{ with the degree matrix } D := {
+		\renewcommand*{\arraystretch}{0.5}
+		\begin{pmatrix}
+			d_1 & & \\
+			& \ddots & \\
+			& & d_N
+		\end{pmatrix}
+	}, d_i := \sum_{j = 1}^{N} w_{i j}
 \end{align}
+Using this definition, the application $L x$ is a discrete generalized analogue of the second derivative $\frac{\partial^2}{\partial t^2} f$.
+Putting both Laplacian variants, $L$ and $\frac{\partial^2}{\partial t^2}$, side-by-side gives an intuition for why this is the case:
+\begin{equation*}
+	\begin{split}
+		{(L x)}_i = \sum_{j = 1}^{N} w_{i j} \underbrace{(x_i - x_j)}_{\Delta_{i, j}}
+	\end{split}
+	\ \left|\ %
+	\begin{split}
+		(-\frac{\partial^2}{\partial t^2} f)(t) &= \lim_{h \to 0} \frac{1}{h^2} (\underbrace{f(t) - f(t-h)}_{\Delta_{t, t-h}} + \underbrace{f(t) -  f(t+h)}_{\Delta_{t, t+h}}) \\
+	\end{split}\right.
+\end{equation*}
+The second derivative of a function essentially just averages the differences in signal strength in the neighborhood of a point.
+For real-valued functions this neighborhood only consists of the two infinitesimally close points to the left and to the right of a point.
+The graph Laplacian represents the same operation, where each point/vertex might now however have more than two neighbors.
 
 \begin{figure}
 	\centering
 	\makebox[\textwidth][c]{\includegraphics[width=\linewidth]{gfx/sgt/graph-fourier.pdf}}
 	\caption{
-		x
+		Comparison between the basis functions/vectors of the classical Fourier transform and the graph Fourier transform.
+		For the eigenfunctions on the upper half only the real cosine components of the complex exponentials are shown.
 	}\label{fig:sgt:graphFourier}
 \end{figure}
+Now that we have defined the graph Laplacian $L$, the graph Fourier basis ${\{ u_k \}}_{1 \leq k \leq N}$ is just the set of eigenvectors of $L$.
+In the rest of this paper we will assume that these eigenvectors $u_k$ are sorted in ascending order w.r.t.\@ their eigenvalues $\lambda_k$, i.e.\@ $\lambda_1 \leq \lambda_2 \leq \cdots \leq \lambda_N$.
+Figure~\ref{fig:sgt:graphFourier} shows how this definition generalizes the Fourier basis from the real number line to an arbitrary graph.
+The figure also shows that the eigenvalues $\lambda_k$ of the graph Fourier basis encode some notion of frequency, just like they do in the classical Fourier basis.
+Those eigenvalues describe many characteristics of a graph and are called its \textit{spectrum}.
+
+\subsection{Spectral Properties of Graphs}%
+\label{sec:sgt:spectrum}
+
+We will now see how the spectrum of a graph describes its structural properties.
+For any graph the smallest eigenvalue always is $\lambda_1 = 0$ with the associated eigenvector $u_1$ being a uniform signal over all vertices.
+Using the heat analogy, this simply means that any system in which everything has the same temperature is in an equilibrium state and no heat is flowing.
+More generally for graphs with $m$ separate connected components the first $m$ eigenvalues are all $0$ since each component can have its own equilibrium temperature without causing heat flow.
+If the spectrum of a graph is known, this fact can be used to quickly determine whether a graph is connected or not.
+
+Another meaningful eigenvalue is $\lambda_2$ and its eigenvector $u_2$, also called the \textit{Fiedler value} and \textit{vector} respectively.
+As we have just seen, a Fiedler value of $\lambda_2 = 0$ means that a graph is not connected.
+More generally the Fielder value can be interpreted as a measure of overall graph connectivity\footnote{
+	Formally this measure is called \textit{algebraic connectivity}, as opposed to regular \textit{graph connectivity}, which is defined as $\min_{v_i \in \mathcal{V}} \deg(v_i)$.
+}.
+If there are two clusters of vertices $\mathcal{V}_+$ and $\mathcal{V}_-$ in a graph that are connected via relatively few edges (compared to the overall number of edges), the Fielder value is small;
+for well connected graphs on the other hand the Fiedler value is large.
+Using the heat analogy, the Fielder value essentially measures the ``width'' of a bottleneck between two parts of a graph through which heat will only flow very slowly or even not at all in case of $\lambda_2 = 0$.
+The partitioning of vertices into $\mathcal{V}_+$ and $\mathcal{V}_-$ can be retrieved via the Fiedler vector $u_2$;
+vertices with a positive signal strength in $u_2$ are in $\mathcal{V}_+$, the other vertices are in $\mathcal{V}_-$.
+The so called \textit{spectral clustering} algorithm is based on this relationship.
+Figure~\ref{fig:sgt:graphFourier} shows how the Fiedler vector $u_2$ partitions a graph via the signs of the vertex signal strengths.
+
+As we have just seen, expressing a graph $G$ in terms of the spectrum of its Laplacian $L$ gives us access to graph characteristics, like its overall connectivity.
+Similar to how the low-frequency components of the Fourier transform of a function represent the overall shape of that function, the eigenvectors associated to the small eigenvectors of $L$ represent overall characteristics of $G$.
+The details of a Fourier-transformed function or graph are encoded in the high-frequency components, i.e.\@ the eigenvectors associated to large eigenvalues.
+This perspective already hints at how spectral graph analysis might be useful to approximate graphs.
