--- a/paper/content/chapter-introduction.tex
+++ b/paper/content/chapter-introduction.tex
@@ -11,7 +11,7 @@ With the rise of Big Data applications over the recent years, working with large
 Algorithms like PageRank or spectral clustering are commonly used to analyze the web graph or social networks.
 In order to run such algorithms on large graphs however, optimizations are required.
 
-For this purpose we will specifically look at graph coarsening.
+For this purpose we will specifically look at \textit{graph coarsening}.
 Coarsening reduces the size of a given graph while preserving its overall structure via some notion of graph similarity that will be defined later.
 Graph algorithms can then be run on the smaller coarsened graph.
 Afterwards the result for the coarsened graph can be iteratively refined to obtain an approximate result for the original graph.
@@ -32,7 +32,7 @@ This introduction consists of three sections, each of which aims to answer one m
 		We begin with an introduction to spectral graph theory.
 		It allows us to describe the structure of graphs and provides the notion of the \textit{graph spectrum}, a way to describe the overall structure of graphs.
 	\item \textit{How does graph coarsening work?}
-		Based on the notion of the graph spectrum, we will look at a randomized coarsening algorithm and analyze its effects on the structure of the coarsened graph.
+		Based on the notion of the graph spectrum, we will formally define the graph coarsening operation and describe a randomized coarsening algorithm.
 	\item \textit{How does coarsening affect the result of graph algorithms?}
-		Finally we will put bounds on how much the described coarsening algorithm is expected to increase the error of spectral clustering.
+		Finally we will put bounds on how much the described coarsening algorithm is expected to increase the error of the spectral clustering algorithm.
 \end{enumerate}
