--- a/paper/content/chapter-introduction.tex
+++ b/paper/content/chapter-introduction.tex
@@ -15,7 +15,7 @@ For this purpose we will specifically look at \textit{graph coarsening}.
 Coarsening reduces the size of a given graph while preserving its overall structure via some notion of graph similarity that will be defined later.
 Graph algorithms can then be run on the smaller coarsened graph.
 Afterwards the result for the coarsened graph can be iteratively refined to obtain an approximate result for the original graph.
-Figure~\ref{fig:intro:overview} illustrates this approach.
+\Cref{fig:intro:overview} illustrates this approach.
 \begin{figure}
 	\centering
 	\includegraphics[width=0.8\linewidth]{gfx/intro/overview.pdf}
