started consequences section

--- a/paper/content/chapter-coarsening.tex
+++ b/paper/content/chapter-coarsening.tex
@@ -66,7 +66,7 @@ Since both the coarsening matrix $C$ and the Laplacian $L$ are operators acting 
 $L_c$ represents the Laplacian of the coarsened graph $G_c$\footnote{%
 	$L_c$ is actually not a proper combinatorial Laplacian, i.e.\@ its rows do not generally add up to $0$.
 	To fix this, $L_c$ could be normalized, which is however not necessary for our analysis.
-	We refer to TODO for the details.
+	We refer to \citet{Loukas2018} for the details.
 }.
 $\widetilde{L}$ represents the Laplacian of the graph $\widetilde{G}$, which is the result of re-expanding the coarsened graph $G_c$.
 During re-expansion, every vertex $v'_i \in \mathcal{V}_c$ is replaced by the complete graph on the vertex set $\varphi^{-1}(v'_i)$.
