--- a/paper/main.tex
+++ b/paper/main.tex
@@ -35,15 +35,15 @@
 % --------------------------
 % Back matter
 % --------------------------
-% {%
-% \renewcommand{\bibfont}{\normalfont\small}
-% \setlength{\biblabelsep}{5pt}
-% \setlength{\bibitemsep}{0.5\baselineskip plus 0.5\baselineskip} % chktex 1
-% \setcounter{biburllcpenalty}{9000}
-% \setcounter{biburlucpenalty}{9999}
-% \printbibliography[nottype=www]
+{%
+\renewcommand{\bibfont}{\normalfont\small}
+\setlength{\biblabelsep}{5pt}
+\setlength{\bibitemsep}{0.5\baselineskip plus 0.5\baselineskip} % chktex 1
+\setcounter{biburllcpenalty}{9000}
+\setcounter{biburlucpenalty}{9999}
+\printbibliography[nottype=www]
 % \printbibliography[heading=subbibliography,title={Webpages},type=www]
-% }
+}
 
 % **************************************************
 % End of Document CONTENT
